# english-learning-app

./: .buildtrigger  .env.production  .gitignore  COMPLETE_MIGRATION_GUIDE.md  DEPLOYMENT_READY.md  FILE_SIMPLIFICATION_SUMMARY.md  FULL_FEATURED_CONFIG_SUMMARY.md  PYTHONANYWHERE_DEPLOYMENT.md  QUICK_SETUP_CHECKLIST.md  QUICK_START.md  README.md  REGISTRATION_TROUBLESHOOTING.md  RENDER_TURSO_DEPLOYMENT.md  REPOSITORY_CLEANUP_SUMMARY.md  SERVICE_FIXES_COMPLETE.md  STEP_BY_STEP_MIGRATION_GUIDE.md  UPLOAD_CHECKLIST.md  build.sh  build_render.sh  check_production.py  cleanup_for_render.py  cleanup_pythonanywhere.py  debug_service_startup.py  migrate_to_turso.py  pythonanywhere_integration.py  pythonanywhere_wsgi_config_template.py  render.yaml  render_new.yaml  render_old.yaml  render_selenium_client.py  requirements.txt  requirements_pythonanywhere.txt  requirements_render.txt  setup.py  setup_render_turso.py  wsgi.py
backend/: ai_models.py  ai_models_render.py  app.py  app_pythonanywhere.py  app_render.py  app_render_full.py  chatbot.py  chatbot_config.py  chatbot_manager.py  config.py  config_deployment.py  config_pythonanywhere.py  config_render.py  config_render_full.py  conversational_ai.py  database_viewer_web.py  free_speech_service.py  google_translation_service.py  rate_limiter.py  requirements.txt  selenium_chatbot.py  translation_service.py  turso_service.py  voice_service.py  web_stt_service.py
frontend/: index.html
replit_files/: .env.example  .replit  main.py  pyproject.toml  replit.nix  requirements.txt
replit_files/backend/: config.py
(+28 files in other folders)
